@@ -1,5 +1,0 @@
-#!/bin/bash
-
-make distclean
-
-qmake -spec macx-g++
